--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,12 +6,7 @@ env:
      tag: "flasktest1"
 
 phases:
-  build:
+  pre_build:
     commands:
-      - echo Build started on `date`
-      - echo Building the Docker image...
-      - chmod +x build_and_push.sh
-      - ./build_and_push.sh $image $AWS_REGION $tag
-  post_build:
-    commands:
-      - echo Build completed on `date`
+      - echo Running unit tests...
+      - python -m unittest discover -s test -p 'test*.py'
