--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,4 +9,4 @@ phases:
   pre_build:
     commands:
       - echo Running unit tests...
-      - python -m unittest discover -s . -p 'test*.py' || exit 1
+      - python -m unittest discover -s test -p 'test*.py' || exit 1
