--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,16 +1,8 @@
-version: 0.2
-
-env:
-  variables:
-     image: "whisper"
-     tag: "flasktest1"
-
 phases:
   pre_build:
     commands:
       - echo Running unit tests...
       - echo Current directory is `pwd`
       - echo PYTHONPATH is $PYTHONPATH
-      - export PYTHONPATH=".:$PYTHONPATH"
+      - export PYTHONPATH="./src:$PYTHONPATH"
       - python -m unittest discover -s test -p 'test*.py' || exit 1
-
