--- a/buildspec_test.yml
+++ b/buildspec_test.yml
@@ -9,8 +9,14 @@ phases:
       - echo Installing python packages...
       - python -m venv .venv
       - . .venv/bin/activate
-      - pip install -r requirements.txt
+      - pip install -r test_main/requirements.txt
+      - pip install -r test_whisper/requirements.txt
   build:
     commands:
       - echo run tests...
       - python -m pytest
+image:
+  name: nvidia/cuda:11.0-base  # example of CUDA compatible Docker image
+  env:
+    variables:
+       NVIDIA_VISIBLE_DEVICES: "all"
